Corregir configuración de cors